2012-10-06 vs. 1.1-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Ivan Bezerra Allaman has began to work in the project as co-author.
  * The notation of FE, SPE and SSPE experiments was simplified.
  * Overall improvements in code, documentation and demos.

2012-09-27 vs. 1.0-8 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers.

2012-06-24  vs. 1.0-7 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Overall improvements were made in the documentation.

2012-06-22  vs. 1.0-6 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Ivan Bezerra Allaman has began to work in the project as co-author.
  * Overall improvements were made in the documentation.
  * First version released on CRAN.

2012-05-27  vs. 1.0-5 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Overall improvements were made in the demos, examples and documentation.

2012-05-25  vs. 1.0-4 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * The slot 'Differences' of the returned list was renamed to 'Diff_Prob".
    The upper tri of the matrix stores the differences between means and
    the lower tri the probability of this value be significative.

2012-04-02  vs. 1.0-3 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers.

2010-06-10  vs. 1.0-2 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers.

2010-06-10  vs. 1.0-1 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers.

2010-05-27  vs. 1.0-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
  * Restrict to testers.
