@@ -3,4 +3,5 @@ RCBD     Example of Randomized Complete Block Design (RCBD)
 LSD      Example of Latin Squares Design (LSD)
 FE       Example of Factorial Experiment (FE)
 SPE      Example of Split-Plot Experiment (SPE)
+SPET     Example of Split-Plot Experiment in time (SPET)
 SSPE     Example of Split-Split-Plot Experiment (SPE)
