@@ -1,0 +1,22 @@
+citHeader("To cite TukeyC in publications use:")
+
+citEntry(entry  = "Manual",
+         title  = "Conventional Tukey Test.",
+         author = "Jose Claudio Faria
+                   Enio G. Jelihovschi,
+                   Ivan Bezerra Allaman",
+         organization = "Universidade Estadual de Santa Cruz - UESC",
+         address      = "Ilheus, Bahia, Brasil",
+         year         = version$year,
+
+         textVersion =
+         paste("Faria, J.C; Jelihovschi, E.G and Allaman, I.B (", version$year, ").",
+               "Conventional Tukey Test.",
+               "UESC, Ilheus, Brasil.",
+               sep="")
+         )
+
+citFooter("Lots of time and effort were invested in creating TukeyC package.",
+          "Please, cite it when using it together with R.",
+          "See also", sQuote("citation()"),
+          "for citing R.")
