@@ -1,3 +1,8 @@
+2012-12-10 vs. 1.1-1 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+  * A small bug was fixed in the function TukeyC.nest.aovlist.R.
+    The lines that were with "[:punct:]" (wrongly) were changed to "[[:punct:]]" (correctly).
+  * New data: SPET (Split-plot in time).
+
 2012-10-06 vs. 1.1-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
   * Ivan Bezerra Allaman has began to work in the project as co-author.
   * The notation of FE, SPE and SSPE experiments was simplified.
@@ -33,4 +38,3 @@
 
 2010-05-27  vs. 1.0-0 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
   * Restrict to testers.
-
